@@ -1,3 +1,4 @@
+* BUGFIX: Cryptoapi KSI_PKISignature_new fails if the input blob can not be parsed.
 * BUGFIX: CryptoAPI uses PKCS7 signatures embedded intermediate certificates in verification process.
 Version 3.12
 
